# TerrainEditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  authors.txt  imgui.ini  vssnippets.snippet
engine/: CMakeLists.txt  config.cc  config.h
engine/application/: CMakeLists.txt
engine/application/basegamefeatures/: entitymanager.cpp  entitymanager.h
engine/application/game/: entity.cpp  entity.h  entitybase.cpp  entitybase.h  perlinnoisegenerator.cpp  perlinnoisegenerator.h  terrain.cpp  terrain.h
engine/core/: CMakeLists.txt  app.cc  app.h  debug.cpp  debug.h  exithandler.cpp  exithandler.h  factory.cpp  factory.h  ptr.h  refcounted.cpp  refcounted.h  refcountedlist.cpp  refcountedlist.h  rtti.cpp  rtti.h  rttimacros.h  singleton.h  sysfunc.h  types.h  weakptr.h
engine/core/linux/: linuxsingleton.h  linuxsysfunc.cpp  linuxsysfunc.h
engine/core/windows/: win32singleton.h  win32sysfunc.cpp  win32sysfunc.h
engine/foundation/: CMakeLists.txt  README.md
engine/foundation/input/: inputmanager.cpp  inputmanager.h
engine/foundation/io/: logger.cpp  logger.h
engine/foundation/math/: mat3.h  mat4.h  math.h  matrix3D.h  matrix4D.h  quaternions.h  vec2.h  vec3.h  vec4.h  vector2D.h  vector3D.h  vector4D.h
engine/foundation/memory/: memory.h
engine/foundation/memory/linux/: linuxmemory.h  linuxmemoryconfig.cpp  linuxmemoryconfig.h
engine/foundation/memory/windows/: winmemory.h  winmemoryconfig.cpp  winmemoryconfig.h
engine/foundation/util/: JsonParser.cpp  JsonParser.h  array.h  curve.hpp  dictionary.h  fixedarray.h  fourcc.h  hashtable.h  jobsystem.cpp  jobsystem.h  list.h  pair.h  string.cpp  string.h  threadpool.cpp  threadpool.h  threadsaferingbuffer.h  variance.h  variant.h
engine/render/: CMakeLists.txt  window.cc  window.h
engine/render/camera/: camera.cpp  camera.h
engine/render/frames/: depthpass.cpp  depthpass.h  drawpass.cpp  drawpass.h  flatgeometrylitpass.cpp  flatgeometrylitpass.h  framepass.cpp  framepass.h  iblpass.cpp  iblpass.h  lightcullingpass.cpp  lightcullingpass.h  postprocessingpass.cpp  postprocessingpass.h  ssaopass.cpp  ssaopass.h
engine/render/material/: material.cpp  material.h  materialparameter.cpp  materialparameter.h
engine/render/render/: renderer.cpp  renderer.h  shadersemantics.h  shadervariables.h  skybox.cpp  skybox.h
engine/render/resources/: deferredrenderer.cpp  deferredrenderer.h  graphicsnode.cpp  graphicsnode.h  halfedgemesh.cpp  halfedgemesh.h  inputmanager.cpp  inputmanager.h  lightnode.cpp  lightnode.h  material.cpp  material.h  materialcomponents.h  meshresource.cpp  meshresource.h  model.cpp  model.h  rasterizer.cpp  rasterizer.h  shaderobject.cpp  shaderobject.h  surface.cpp  surface.h  texturenode.cpp  texturenode.h  textureresource.cpp  textureresource.h  vertexcomponent.h
engine/render/server/: frameserver.cpp  frameserver.h  lightserver.cpp  lightserver.h  pickingServer.cpp  pickingServer.h  resourceserver.cpp  resourceserver.h  shaderserver.cpp  shaderserver.h
engine/render/terrain/: terrain.cpp  terrain.h  terrainheightpass.cpp  terrainheightpass.h  terrainsplatpass.cpp  terrainsplatpass.h
engine/ui/: CMakeLists.txt  imguiextra.h  uiserver.cpp  uiserver.h
engine/ui/commands/: changevaluecommand.h  commandbase.h  commandmanager.cpp  commandmanager.h
engine/ui/widgets/: widget.h  widgetdebugvars.cpp  widgetdebugvars.h  widgetinspector.cpp  widgetinspector.h  widgetmenubar.cpp  widgetmenubar.h  widgetperlingenerator.cpp  widgetperlingenerator.h  widgetrendersettings.cpp  widgetrendersettings.h  widgetterrainsettings.cpp  widgetterrainsettings.h  widgettoolbar.cpp  widgettoolbar.h  widgetview.cpp  widgetview.h
exts/: CMakeLists.txt
exts/assimp/: CMakeLists.txt
exts/glew/: CMakeLists.txt
exts/glfw-3.1.1/: CMakeLists.txt
exts/imgui/: imgui.cpp  imgui.h  imgui_color_gradient.cpp  imgui_color_gradient.h  imgui_dock.cpp  imgui_dock.h  imgui_internal.h
exts/imgui/examples/opengl3_example/: imgui_impl_glfw_gl3.cpp
exts/misc/: CMakeLists.txt  tinyxml2.cpp
projects/: CMakeLists.txt
projects/example/: CMakeLists.txt
projects/example/code/: exampleapp.cc  exampleapp.h  main.cc
projects/sandbox/: CMakeLists.txt
projects/sandbox/code/: application.cc  application.h  main.cc  stdafx.cpp  userinterface.cpp  userinterface.h
projects/terrain/: CMakeLists.txt
projects/terrain/code/: CGLab.cc  CGlab.h  application.cc  application.h  imguiextra.h  main.cc  terrain.cpp  terrain.h  uisettings.h  userinterface.cpp  userinterface.h
resources/: materials.json
resources/assets/Cerberus/: Cerberus_LP.FBX
resources/assets/Sponza/: background_roughness.tga  background_spec.tga  chaintexture_roughness.tga  lion_roughness.tga  lion_spec.tga  spnza_bricks_a_spec.tga  sponza_arch_roughness.tga  sponza_bricks_a_roughness.tga  sponza_ceiling_roughness.tga  sponza_column_a_roughness.tga  sponza_column_b_roughness.tga  sponza_column_c_roughness.tga  sponza_curtain_roughness.tga  sponza_details_roughness.tga  sponza_fabric_roughness.tga  sponza_flagpole_roughness.tga  sponza_floor_roughness.tga  sponza_roof_roughness.tga  sponza_thorn_spec.tga  vase_plant_roughness.tga  vase_roughness.tga  vasehanging_roughness.tga  vaseround_roughness.tga
resources/models/: Unit_Footman.constants  cerberus.mdl  scifihelmet.mdl  sponza.mdl
resources/shaders/: Blinn-phong.frag  Blinn-phong.vert  PBR.frag  PBR.vert  brdf.comp  gBuffer.vert  irmap.comp  lightculling.comp  lights.frag  perlinnoise.comp  postprocessing.frag  postprocessing.vert  shaders.json  skybox.frag  skybox.vert  ssao.frag  terrainPBR.frag  terrainPBR.vert  terrainPhong.frag
resources/shaders/common/: common.glsl  lights.glsl  pbr.glsl
resources/shaders/compute/: eq2cube.comp  heightmap.comp  irmap.comp  spmap.comp
resources/shaders/fragment/: PBR.frag  blend.glsl  blinnphong.frag  blinnphongskinned.frag  brdf.frag  depth.frag  eq2cube.frag  fragmentShader.frag  lights.frag  lights.glsl  postprocessing.frag  spmap.frag  ssao.frag  (+2 more)
resources/surfaces/: cerberus.sur  scifihelmet.sur  terrain.sur
resources/textures/: Footman_Diffuse.tga
(+51 files in other folders)
